[package]
name = "tatara-mesh"
version = "0.1.0"
edition = "2024"
rust-version = "1.89.0"
authors = ["Pleme Team <team@pleme.io>"]
description = "tatara-mesh — typed `(defmesh …)` primitive. Rust struct + validation for the pleme-io service-mesh spec, consumed by arch-synthesizer to render concrete K8s manifests."
license = "MIT OR Apache-2.0"
repository = "https://github.com/pleme-io/tatara-mesh"
readme = "README.md"
keywords = ["service-mesh", "spiffe", "tatara", "lisp", "typed"]
categories = ["config", "data-structures"]

[lib]
name = "tatara_mesh"
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml_ng = "0.10"
thiserror = "2"

[dev-dependencies]
serde_json = "1"

[lints.clippy]
pedantic = "warn"

[profile.release]
codegen-units = 1
lto = true
opt-level = 3
strip = true
